alb-tg.yaml
#
# Filename    : CDP-GG
# Date        : 15Dec2021
# Author      : Madhav Ravipati (m2ru@pge.com)
# Description : CDP Golden Gate machine
#
# Usage:
#   AWS console->CloudFormation->Create stack->upload this file
#
#
AWSTemplateFormatVersion: '2010-09-09'
Description: 'Create CDP Golden Gate Stack'
Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
      - Label:
          default: "EC2 Instnace details"
        Parameters:
          - pEC2Instance
          - pKeyName
          - pInstanceStorage
      - Label:
          default: "Network Information from parameter store (do not change)"
        Parameters:
          - pVPCID
          - pPrivateSubnet1ID
          - pPrivateSubnet1CIDR
          - pPrivateSubnet2ID
          - pPrivateSubnet2CIDR
          - pPrivateSubnet3ID
          - pPrivateSubnet3CIDR
          - pSharedServicesVpcCidr

      - Label:
          default: "Application Information from parameter store (do not change)"
        Parameters:
          - pAppName
          - pAppID
          - pEnv
          - pOrder
          - pOrg
          - pOwner
          - pProjectName
Parameters:
  pInstanceType:
    Type: String
    Default: r6i.xlarge
    AllowedValues:
      - r6i.large
      - r6i.xlarge
      - t4.micro
      - t4.small
    Description: 'Enter t2.micro, m1.small, or m1.large. Default is t2.micro.'

  pInstanceStorage:
    Description: Enter the value for EBS storage
    Type: Number
    Default: '100'
    MinValue: '100'
    ConstraintDescription: must be more than 100 Gb.

  pVolumeSize:
    Description: Enter the value for volume storage
    Type: Number
    Default: '100'
    MinValue: '100'
    ConstraintDescription: must be more than 100 Gb.

  pVPCID:
    Description: 'Parameter store name /vpc/id'
    Type: 'AWS::SSM::Parameter::Value<String>'
    Default: /vpc/id

  pPrivateSubnet1ID:
    Description: 'Parameter store name /vpc/privatesubnet1/id'
    Type: 'AWS::SSM::Parameter::Value<String>'
    Default: /vpc/privatesubnet1/id

  pPrivateSubnet1CIDR:
    Description: 'Parameter store name /vpc/privatesubnet1/cidr'
    Type: 'AWS::SSM::Parameter::Value<String>'
    Default: /vpc/privatesubnet1/cidr

  pPrivateSubnet2ID:
    Description: 'Parameter store name /vpc/privatesubnet2/id'
    Type: 'AWS::SSM::Parameter::Value<String>'
    Default: /vpc/privatesubnet2/id

  pPrivateSubnet2CIDR:
    Description: 'Parameter store name /vpc/privatesubnet2/cidr'
    Type: 'AWS::SSM::Parameter::Value<String>'
    Default: /vpc/privatesubnet2/cidr

  pPrivateSubnet3ID:
    Description: 'Parameter store name /vpc/privatesubnet3/id'
    Type: 'AWS::SSM::Parameter::Value<String>'
    Default: /vpc/privatesubnet3/id

  pPrivateSubnet3CIDR:
    Description: 'Parameter store name /vpc/privatesubnet3/cidr'
    Type: 'AWS::SSM::Parameter::Value<String>'
    Default: /vpc/privatesubnet3/cidr

  pRHELGoldenAMI:
    Description: 'Parameter store name /ami/rhellinux/golden'
    Type: 'AWS::SSM::Parameter::Value<String>'
    Default: /ami/rhellinux/golden

  pGoldenAMI:
    Description: 'Parameter store name /ami/linux/golden'
    Type: 'AWS::SSM::Parameter::Value<String>'
    Default: /ami/linux/golden
	
  VolumeName:
    Description: The name to be used for the EFS volume
    Type: String
    MinLength: '1'
    Default: myEFSvolume
	
  MountPoint:
    Description: The Linux mount point for the EFS volume
    Type: String
    MinLength: '1'
    Default: myEFSvolume
	
  pAppID:
    Type: 'AWS::SSM::Parameter::Value<String>'
    Default: '/general/appid'
  pAppName:
    Type: 'AWS::SSM::Parameter::Value<String>'
    Default: '/general/appname'
  pEnv:
    Type: 'AWS::SSM::Parameter::Value<String>'
    Default: '/general/environment'
  pOrder:
    Type: 'AWS::SSM::Parameter::Value<String>'
    Default: '/general/order'
  pOrg:
    Type: 'AWS::SSM::Parameter::Value<String>'
    Default: '/general/org'
  pOwner:
    Type: 'AWS::SSM::Parameter::Value<String>'
    Default: '/general/owner'
  pProjectName:
    Type: 'AWS::SSM::Parameter::Value<String>'
    Default: '/general/project'
  pNotify:
    Type: 'AWS::SSM::Parameter::Value<String>'
    Default: '/general/notify'
  pRole:
    Type: 'AWS::SSM::Parameter::Value<String>'
    Default: '/general/role'
Resources:
  rEC2InstanceProfile:
    Type: 'AWS::IAM::InstanceProfile'
    Properties:
      Path: /
      Roles:
        - !Ref rAmiToolsEC2Role
    Metadata:
      'AWS::CloudFormation::Designer':
        id: b6d879bc-1be3-4dea-a8bd-d5372f19edf8
  rAmiToolsEC2Role:
    Type: 'AWS::IAM::Role'
    Properties:
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - ec2.amazonaws.com
            Action:
              - 'sts:AssumeRole'
      ManagedPolicyArns:
        - 'arn:aws:iam::aws:policy/CloudWatchAgentAdminPolicy'
        - 'arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore'
        - 'arn:aws:iam::aws:policy/AmazonS3FullAccess'
        - 'arn:aws:iam::aws:policy/AmazonElasticFileSystemClientFullAccess'
      Path: /
      Policies:
        - PolicyName: kms-policy
          PolicyDocument:
            Version: 2012-10-17
            Statement:
              - Effect: Allow
                Action: 'kms:*'
                Resource: '*'
  rSecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: "Enable SSH, HTTP, HTTPS"
      VpcId: !Ref pVPCID
      SecurityGroupIngress:
        - IpProtocol: "tcp"
          FromPort: "443"
          ToPort: "443"
          CidrIp: "10.0.0.0/8"
        - IpProtocol: "tcp"
          FromPort: "443"
          ToPort: "443"
          CidrIp: "192.168.0.0/16"
        - IpProtocol: "tcp"
          FromPort: "443"
          ToPort: "443"
          CidrIp: "172.16.0.0/12"
        - IpProtocol: "tcp"
          FromPort: "7809"
          ToPort: "7820"
          CidrIp: "10.0.0.0/8"
        - IpProtocol: "tcp"
          FromPort: "7809"
          ToPort: "7820"
          CidrIp: "192.168.0.0/16"
        - IpProtocol: "tcp"
          FromPort: "7809"
          ToPort: "7820"
          CidrIp: "172.16.0.0/12"
        - IpProtocol: "tcp"
          FromPort: "9000"
          ToPort: "9007"
          CidrIp: "10.0.0.0/8"
        - IpProtocol: "tcp"
          FromPort: "9000"
          ToPort: "9007"
          CidrIp: "192.168.0.0/16"
        - IpProtocol: "tcp"
          FromPort: "9000"
          ToPort: "9007"
          CidrIp: "172.16.0.0/12"
  rEC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      IamInstanceProfile: !Ref rEC2InstanceProfile
      ImageId: !Ref pRHELGoldenAMI
      InstanceType: !Ref pInstanceType
      SecurityGroupIds:
        - !Ref rSecurityGroup
      SubnetId: !Ref pPrivateSubnet1ID
      BlockDeviceMappings:
        - DeviceName: /dev/xvda
          Ebs:
            VolumeSize:
              Ref: pInstanceStorage
            VolumeType: gp2
            DeleteOnTermination: 'true'
            Encrypted: 'true'
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash -x
          yum update -y
          yum install postgresql.x86_64 -y
          yum install libnsl -y
          yum install vim-enhanced -y
          lsblk
          file -s /dev/nvme1n1
          mkfs -t ext4 /dev/nvme1n1
          mkdir /stvol1
          mount /dev/nvme1n1 /stvol1
      Tags:
        - Key: AppID
          Value: !Ref pAppID
        - Key: AppName
          Value: !Ref pAppName
        - Key: Environment
          Value: !Ref pEnv
        - Key: Notify
          Value: !Ref pNotify
        - Key: Order
          Value: !Ref pOrder
        - Key: Org
          Value: !Ref pOrg
        - Key: Owner
          Value: !Ref pOwner
        - Key: ProjectName
          Value: !Ref pProjectName
        - Key: Role
          Value: !Ref pRole
        - Key: "Name"
          Value: cdp-gg1
  rNewVolume:
    Type: 'AWS::EC2::Volume'
    Properties:
      Size: !Ref pVolumeSize
      Encrypted: true
      VolumeType: gp2
      AvailabilityZone: !GetAtt rEC2Instance.AvailabilityZone
      Tags:
        - Key: AppID
          Value: !Ref pAppID
        - Key: AppName
          Value: !Ref pAppName
        - Key: Environment
          Value: !Ref pEnv
        - Key: Notify
          Value: !Ref pNotify
        - Key: Order
          Value: !Ref pOrder
        - Key: Org
          Value: !Ref pOrg
        - Key: Owner
          Value: !Ref pOwner
        - Key: ProjectName
          Value: !Ref pProjectName
        - Key: Role
          Value: !Ref pRole
        - Key: Name
          Value: !Sub '${pProjectName}-${pEnv}'
  rMountPoint:
    Type: 'AWS::EC2::VolumeAttachment'
    Properties:
      InstanceId: !Ref rEC2Instance
      VolumeId: !Ref rNewVolume
      Device: /dev/sdh
  MountTargetSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref pVPCID
      GroupDescription: Security group for mount target
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 2049
        ToPort: 2049
        CidrIp: 0.0.0.0/0
  FileSystem:
    Type: AWS::EFS::FileSystem
    Properties:
      PerformanceMode: generalPurpose
      FileSystemTags:
      - Key: Name
        Value: !Ref VolumeName
  MountTarget:
    Type: AWS::EFS::MountTarget
    Properties:
      FileSystemId: !Ref FileSystem
      SubnetId: !Ref pPrivateSubnet1ID
      SecurityGroups: !Ref MountTargetSecurityGroup
 ALBSecurityGroup:
        Type: "AWS::EC2::SecurityGroup"
        Properties:
            GroupDescription: "security group for ALB"
            GroupName: "test-ALB-SG"
            Tags: 
              - 
                Key: "Project"
                Value: "test-blog"
              - 
                Key: "createdBy"
                Value: "Maureen Barasa"
              - 
                Key: "Environment"
                Value: "test"
              - 
                Key: "Name"
                Value: "test-ALB-SG"
            VpcId: !Ref pVPCID
            SecurityGroupIngress: 
              - 
                CidrIp: "0.0.0.0/0"
                FromPort: 80
                IpProtocol: "tcp"
                ToPort: 80
              - 
                CidrIp: "0.0.0.0/0"
                FromPort: 443
                IpProtocol: "tcp"
                ToPort: 443

ApplicationLoadBalancer:
        Type: "AWS::ElasticLoadBalancingV2::LoadBalancer"
        Properties:
            Name: "test-Application-Load-Balancer"
            Scheme: "intranet"
            Type: "application"
            Subnets: 
              - !Ref pPrivateSubnet1ID
              - !Ref pPrivateSubnet2ID
            SecurityGroups: 
              - !Ref ALBSecurityGroup
            IpAddressType: "ipv4"
            LoadBalancerAttributes: 
              - 
                Key: "access_logs.s3.enabled"
                Value: "false"
              - 
                Key: "idle_timeout.timeout_seconds"
                Value: "60"
              - 
                Key: "deletion_protection.enabled"
                Value: "false"
              - 
                Key: "routing.http2.enabled"
                Value: "true"
              - 
                Key: "routing.http.drop_invalid_header_fields.enabled"
                Value: "false"

    HTTPSListener:
        Type: "AWS::ElasticLoadBalancingV2::Listener"
        Properties:
            LoadBalancerArn: !Ref ApplicationLoadBalancer
            Port: 443
            Protocol: "HTTPS"
            SslPolicy: "ELBSecurityPolicy-2016-08"
            Certificates: 
              - 
                CertificateArn: arn:aws:acm:eu-central-1:**************:certificate/*********************
                
            DefaultActions: 
              - 
                Type: fixed-response
		FixedResponseConfig:
		 StatusCode: 503
                 ContentType: "text/plain"
                 MessageBody: "Unknown Service"

    HTTPListener:
        Type: "AWS::ElasticLoadBalancingV2::Listener"
        Properties:
            LoadBalancerArn: !Ref ApplicationLoadBalancer
            Port: 80
            Protocol: "HTTP"
            DefaultActions: 
              - 
                Order: 1
                RedirectConfig: 
                    Protocol: "HTTPS"
                    Port: "443"
                    Host: "#{host}"
                    Path: "/#{path}"
                    Query: "#{query}"
                    StatusCode: "HTTP_301"
                Type: "redirect"

Test1TargetGroup:
        Type: "AWS::ElasticLoadBalancingV2::TargetGroup"
        Properties:
            HealthCheckIntervalSeconds: 30
            HealthCheckPath: "/"
            Port: 80
            Protocol: "HTTP"
            HealthCheckPort: "traffic-port"
            HealthCheckProtocol: "HTTP"
            HealthCheckTimeoutSeconds: 5
            UnhealthyThresholdCount: 2
            TargetType: "instance"
            Matcher: 
                HttpCode: "200"
            HealthyThresholdCount: 5
            VpcId: !Ref pVPCID
            Name: "target-group-1"
            HealthCheckEnabled: true
            TargetGroupAttributes: 
              - 
                Key: "stickiness.enabled"
                Value: "false"
              - 
                Key: "deregistration_delay.timeout_seconds"
                Value: "300"
              - 
                Key: "stickiness.type"
                Value: "lb_cookie"
              - 
                Key: "stickiness.lb_cookie.duration_seconds"
                Value: "86400"
              - 
                Key: "slow_start.duration_seconds"
                Value: "0"
              - 
                Key: "load_balancing.algorithm.type"
                Value: "round_robin"
	    Targets:
              - Id: !Ref rEC2Instance
                Port: 80

    Test2TargetGroup:
        Type: "AWS::ElasticLoadBalancingV2::TargetGroup"
        Properties:
            HealthCheckIntervalSeconds: 30
            HealthCheckPath: "/"
            Port: 80
            Protocol: "HTTP"
            HealthCheckPort: "traffic-port"
            HealthCheckProtocol: "HTTP"
            HealthCheckTimeoutSeconds: 5
            UnhealthyThresholdCount: 2
            TargetType: "instance"
            Matcher: 
                HttpCode: "200"
            HealthyThresholdCount: 5
            VpcId: !Ref pVPCID
            Name: "target-group-2"
            HealthCheckEnabled: true
            TargetGroupAttributes: 
              - 
                Key: "stickiness.enabled"
                Value: "false"
              - 
                Key: "deregistration_delay.timeout_seconds"
                Value: "300"
              - 
                Key: "stickiness.type"
                Value: "lb_cookie"
              - 
                Key: "stickiness.lb_cookie.duration_seconds"
                Value: "86400"
              - 
                Key: "slow_start.duration_seconds"
                Value: "0"
              - 
                Key: "load_balancing.algorithm.type"
                Value: "round_robin"
	    Targets:
              - Id: !Ref rEC2Instance
                Port: 80
               
    TestListenerRule1:
        Type: "AWS::ElasticLoadBalancingV2::ListenerRule"
        Properties:
            Priority: "1"
            ListenerArn: !Ref HTTPSListener
            Conditions: 
              - 
                Field: "host-header"
                Values: 
                  - "test1.blog.avrcr.com"
            Actions: 
              - 
                Type: "forward"
                TargetGroupArn: !Ref Test1TargetGroup
                Order: 1
                ForwardConfig: 
                    TargetGroups: 
                      - 
                        TargetGroupArn: !Ref Test1TargetGroup
                        Weight: 1
                    TargetGroupStickinessConfig: 
                        Enabled: false

    TestListenerRule2:
        Type: "AWS::ElasticLoadBalancingV2::ListenerRule"
        Properties:
            Priority: "2"
            ListenerArn: !Ref HTTPSListener
            Conditions: 
              - 
                Field: "host-header"
                Values: 
                  - "test2.blog.com"
            Actions: 
              - 
                Type: "forward"
                TargetGroupArn: !Ref Test2TargetGroup
                Order: 1
                ForwardConfig: 
                    TargetGroups: 
                      - 
                        TargetGroupArn: !Ref Test2TargetGroup
                        Weight: 1
                    TargetGroupStickinessConfig: 
                        Enabled: false
